klipper: fix editing history for the first item

Editing the first item will not trigger the rowsMoved signal, so we
still need to listen to the dataChanged signal to update clipboard.

BUG: 494031
FIXED-IN: 6.2.1