klipper/historymodel.cpp
@@ -66,6 +66,9 @@ HistoryModel::HistoryModel()
             [this](const QModelIndex & /*sourceParent*/, int sourceStart, int /*sourceEnd*/, const QModelIndex & /*destinationParent*/, int destinationRow) {
                 Q_EMIT changed(sourceStart == 0 || destinationRow == 0);
             });
+    connect(this, &HistoryModel::dataChanged, this, [this](const QModelIndex &topLeft) {
+        Q_EMIT changed(topLeft.row() == 0); // BUG 494031 the first item does not trigger rowsMoved
+    });
     connect(this, &HistoryModel::modelReset, this, [this] {
         Q_EMIT changed(true);
     });
